syntax = "proto3";

message ContentMapping {
    string file = 1;
    string hash = 2;
}

message MappingsResponse  {
    string parcel_id = 1;
    string root_cid = 2;
    repeated ContentMapping contents = 3;
}

message Land {
    string scene_id = 1;
    string scene_json_data = 2;
    string base_url = 3;
    string base_url_bundles = 4;
    MappingsResponse mappings_response = 5;
}

message GetParcelRequest {}
message GetParcelResponse {
    Land land = 1;
    string cid = 2;
}

message GetSceneIdRequest {}
message GetSceneIdResponse {
    string scene_id = 1;
}

message GetIsEmptyRequest {}
message GetIsEmptyResponse {
    bool is_empty = 1;
}

service ParcelIdentityService {
    rpc GetParcel(GetParcelRequest) returns (GetParcelResponse) {}
    rpc GetSceneId(GetSceneIdRequest) returns (GetSceneIdResponse) {}
    rpc GetIsEmpty(GetIsEmptyRequest) returns (GetIsEmptyResponse) {}
}
